Closed Bug 1855227 Opened 2 years ago Closed 2 years ago

Tb windows build busted 2023-09-26: /builds/worker/checkouts/gecko/comm/mailnews/addrbook/src/nsAbOutlookDirectory.cpp(1055,13): error: format specifies type 'unsigned int' but the argument has type 'nsresult' [-Werror,-Wformat]

Categories

(Thunderbird :: Build Config, defect, P1)

Tracking

(thunderbird_esr115 unaffected, thunderbird119 unaffected)

RESOLVED FIXED
120 Branch
Tracking Status
thunderbird_esr115 --- unaffected
thunderbird119 --- unaffected

People

(Reporter: intermittent-bug-filer, Assigned: freaktechnik)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Something just got a bit stricter by default I suppose. The "warnings" it found are certainly correct, and they just need to be fixed.

Assignee: nobody → martin
Status: NEW → ASSIGNED

Pushed by martin@humanoids.be:
https://hg.mozilla.org/comm-central/rev/d430d99dadb3
Log nsresult in string form. r=aleca,babolivier

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: