Bug 1855227 - Log nsresult in string form. r=aleca,babolivier

Differential Revision: https://phabricator.services.mozilla.com/D189246

--HG--
extra : amend_source : bc61cc078d37db486966099c4020e538e5fbc299